endpointy dzialaja!